# Pebble

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  README.zh-CN.md  default.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.json  update.sh  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/pebble-core/: Cargo.toml
crates/pebble-crypto/: Cargo.toml
crates/pebble-privacy/: Cargo.toml
crates/pebble-store/: Cargo.toml
docs/: 2026-04-05-frontend-audit-report.md  2026-04-05-project-audit-report.md  2026-04-05-strict-fullstack-audit-report.md  2026-04-05-team-multi-angle-review-report.md  2026-04-05-team-review-report.md  2026-04-06-team-multi-angle-review-report.md  AUDIT_REPORT.md
scripts/: build-tauri.mjs
site/: gen_icons.py  index.html  main.js  privacy.html  terms.html  wrangler.jsonc
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  snooze_watcher.rs  state.rs
src/app/: Layout.tsx  useMailtoOpen.ts  useRealtimePreferenceSync.ts  useRealtimeSyncTriggers.ts
src/components/: AccountSetup.tsx  AttachmentList.tsx  ConfirmDialog.tsx  ContactAutocomplete.tsx  MessageDetail.tsx  MessageItem.tsx  MessageList.tsx  ShadowDomEmail.tsx  Sidebar.tsx  StatusBar.tsx  ThreadItem.tsx  TitleBar.tsx  ToastContainer.tsx
src/hooks/: useComposeDraft.ts  useComposeEditor.ts  useComposeRecipients.ts  useFolders.ts  useKeyboard.ts  useMessageLoader.ts  useMessages.ts  useNetworkStatus.ts  useSearch.ts
src/lib/: api.ts  (+7 more)
(+137 files in other folders)
